--- a/css/custom.css
+++ b/css/custom.css
@@ -2,3 +2,12 @@
 	background: url('../images/trail2.jpg');
     background-size: cover;
 }
+
+.center {
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+}
+/*body { 
+	padding-top: 5px;
+}*/
